CS59_Intellij/tests/valid/defaultidx.dsl
/* valid: list ID defaults to first element */
hi: "Hello World".
Write hi.