CS59_Intellij/tests/invalid/allcapserror.dsl
/* invalid due to case mismatch */
PRINT "Hello World".